Support trailing commas for Python in lupdate

Python syntax allows trailing commas in function calls, so lupdate is
updated to support that syntax during extraction.

Fixes: QTBUG-100310
Change-Id: I26037883b0b24778a511a7ae3a5e392464dfe8c0
Reviewed-by: Kai Koehne <kai.koehne@qt.io>